...
            "state" : "translated",
            "value" : "Добавить тему"
          }
        }
      }
    },
    "Add to favorites" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zu Favoriten hinzufügen"
...
            "state" : "translated",
            "value" : "Отменить изменения?"
          }
        }
      }
    },
    "Done" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fertig"
...
            "state" : "translated",
            "value" : "Свободно"
          }
        }
      }
    },
    "Gallery" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Galerie"
...
            "state" : "translated",
            "value" : "Скрыт правилом автоскрытия"
          }
        }
      }
    },
    "Hidden post" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Verborgener Beitrag"
...
            "state" : "translated",
            "value" : "Скрытый тред, %@"
          }
        }
      }
    },
    "Hidden threads" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Verborgene Threads"
...
            "state" : "translated",
            "value" : "Скрытые треды"
          }
        }
      }
    },
    "Hide" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ausblenden"
...
            "state" : "translated",
            "value" : "Скройте пост через его меню, чтобы добавить правило."
          }
        }
      }
    },
    "Hide thread" : {
      "comment" : "A button that hides a thread.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Для этого зеркала пока ничего не сохранено."
          }
        }
      }
    },
    "Nothing hidden" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nichts verborgen"
...
            "state" : "translated",
            "value" : "Bild %1$lld von %2$lld"
          }
        }
      }
    },
    "Pin board" : {
      "comment" : "The text of a button that pins a board.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Запоминать открытые треды"
          }
        }
      }
    },
    "Remove" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Entfernen"
...
            "state" : "translated",
            "value" : "Удалить недоступные"
          }
        }
      }
    },
    "Remove from favorites" : {
      "comment" : "A label for a menu item that removes a thread from the user's favorites.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Чтобы включить, задайте код-пароль на устройстве."
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Einstellungen"
...
            "state" : "translated",
            "value" : "Эту картинку нельзя отредактировать"
          }
        }
      }
    },
    "This post" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dieser Beitrag"
...
            "state" : "translated",
            "value" : "Видео не удалось воспроизвести."
          }
        }
      }
    },
    "Thread actions" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Thread-Aktionen"
...
            "state" : "translated",
            "value" : "Действия с тредом"
          }
        }
      }
    },
    "Threads" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Threads"
...
            "state" : "translated",
            "value" : "Показать"
          }
        }
      }
    },
    "Unhide all" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alle einblenden"
...
            "state" : "translated",
            "value" : "Включить звук"
          }
        }
      }
    },
    "Unpin board" : {
      "comment" : "The text of a button that unpins a board.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Видео"
          }
        }
      }
    },
    "View options" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ansichtsoptionen"
...
